chore: Update Doxygen Action configuration in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,8 @@ jobs:
     - name: Doxygen Action
       uses: mattnotmitt/doxygen-action@1.9.8
       with:
-        doxyfile-path: 'Doxyfile'
+        working-directory: 'src'
+        doxyfile-path: 'doxyfile'
 
     - name: Deploy to GitHub Pages
       id: deploy
