--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
         doxyfile-path: 'doxyfile'
 
     - name: Deploy to GitHub Pages
-      id: deploy
-      uses: actions/deploy-pages@v4 #JamesIves/github-pages-deploy-action@4.1.5
-    #   with:
-    #     branch: gh-pages
-    #     folder: docs
+      uses: JamesIves/github-pages-deploy-action@4.1.5
+      with:
+        branch: gh-pages
+        folder: docs
+        token: ${{ secrets.GITHUB_TOKEN }}
