--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,12 +15,11 @@ jobs:
     - name: Doxygen Action
       uses: mattnotmitt/doxygen-action@1.9.8
       with:
-        working-directory: 'src'
-        doxyfile-path: 'doxyfile'
+        doxyfile-path: './doxyfile'
+        working-directory: '.'
 
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@4.1.5
+    - name: Deploy on GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        branch: gh-pages
-        folder: src
-        token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./html
